# devctx

./: README.md  pyproject.toml
devctx/: __init__.py  cli.py  mcp_server.py
devctx/collectors/: __init__.py  deploy.py  env.py  git.py  hints.py  services.py
tests/: test_cli.py  test_deploy.py  test_env.py  test_git.py  test_hints.py  test_mcp_server.py  test_services.py
